{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 91,
  "lineage": "63efc7b1-59e2-cce0-289e-ca833c725f27",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:security-group/sg-0f3258bd99aef6abd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3258bd99aef6abd",
            "ingress": [],
            "name": "terraform-20220121230636302400000006",
            "name_prefix": "terraform-",
            "owner_id": "224194717462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078fcb8a1789ef729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:internet-gateway/igw-0e0493671b081dddb",
            "id": "igw-0e0493671b081dddb",
            "owner_id": "224194717462",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-078fcb8a1789ef729"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:route-table/rtb-097a9cf28de0574aa",
            "id": "rtb-097a9cf28de0574aa",
            "owner_id": "224194717462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0493671b081dddb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-078fcb8a1789ef729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b60b0d6f53f4cbf",
            "route_table_id": "rtb-097a9cf28de0574aa",
            "subnet_id": "subnet-0222f50cc5c9ab865"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb065d262d926a0a",
            "route_table_id": "rtb-097a9cf28de0574aa",
            "subnet_id": "subnet-0d964a535eab0f585"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:subnet/subnet-0222f50cc5c9ab865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0222f50cc5c9ab865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224194717462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-078fcb8a1789ef729"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:subnet/subnet-0d964a535eab0f585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d964a535eab0f585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224194717462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-078fcb8a1789ef729"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224194717462:vpc/vpc-078fcb8a1789ef729",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7df71bf6593dc33",
            "default_route_table_id": "rtb-0db64e6c7dfb4c23b",
            "default_security_group_id": "sg-088b42b39f9f947a2",
            "dhcp_options_id": "dopt-1cce4a66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-078fcb8a1789ef729",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db64e6c7dfb4c23b",
            "owner_id": "224194717462",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}